# NeatReflection

./: .gitignore  CMakeLists.txt  CMakePresets.json  FUTURE WORK.md  README.md
.github/workflows/: build.yml
NeatReflection/: CMakeLists.txt
NeatReflection/include/Neat/: DllMacro.h  ExtraAttribute.h  ReflectPrivateMembers.h  Reflection.h  TemplateTypeId.h
NeatReflection/src/Neat/: Reflection.cpp  TemplateTypeId.cpp
NeatReflectionCodeGen/: CMakeLists.txt
NeatReflectionCodeGen/include/: CodeGenExceptions.h  CodeGenerator.h  ContextualException.h  ManualAttributeParser.h
NeatReflectionCodeGen/src/: CodeGenExceptions.cpp  CodeGenerator.cpp  ContextualException.cpp  Main.cpp  ManualAttributeParser.cpp
examples/: CMakeLists.txt
examples/serialisation/: CMakeLists.txt  serialisation_example.ixx  serialisation_example_runner.cpp
examples/simple/: CMakeLists.txt  simple_example.ixx  simple_example_runner.cpp
extras/: BMIPath.cmake
include/Neat/: Reflection.h  TemplateTypeId.h
include/neat/: Any.h  Defines.h  DllExportMacro.h  ReflectPrivateMembers.h  Reflection.h  TemplateTypeId.h
src/Neat/: Reflection.cpp  TemplateTypeId.cpp
src/neat/: Any.cpp  Reflection.cpp  TemplateTypeId.cpp
tests/: CMakeLists.txt  TestBasics.cpp  TestMethods.cpp  TestModule1.cpp  TestModule1.ixx
tests/Folder/: TestModule2.ixx
tests/modules_code/: DependantModule.ixx  TestModule1.cpp  TestModule1.ixx  TestModuleWithTemplates.ixx
tests/modules_code/folder/: TestModule2.cpp  TestModule2.ixx
tests/more_modules_code/: TestModuleUsingOtherLibrariesModule.ixx
tests/test_runner/: TestAliases.cpp  TestAny.cpp  TestBasics.cpp  TestExternalReference.cpp  TestHashAndComparison.cpp  TestHashes.cpp  TestMethods.cpp  TestTemplateArgs.cpp  TestTemplateTypeId.cpp
tools/neat_code_gen/: CMakeLists.txt
tools/neat_code_gen/libs/ifc_processing_utilities/: CMakeLists.txt
tools/neat_code_gen/libs/ifc_processing_utilities/include/: ContextualException.h  IfcConversion.h  IfcRendering.h  IfcVisitor.h  MioBlobHolder.h  StringOperations.h
tools/neat_code_gen/libs/ifc_processing_utilities/src/: ContextualException.cpp  IfcConversion.cpp  IfcRendering.cpp  StringOperations.cpp
tools/neat_code_gen/src/: CodeGenerator.cpp  CodeGenerator.h  ContextualException.cpp  IfcConversion.h  Main.cpp
