add_library(NeatReflectionExample_Serialisation "serialisation_example.ixx")
target_compile_features(NeatReflectionExample_Serialisation PUBLIC cxx_std_20)
target_link_libraries(NeatReflectionExample_Serialisation PUBLIC NeatReflection nlohmann_json)
set_target_properties(NeatReflectionExample_Serialisation PROPERTIES FOLDER "Neat/Examples")

add_reflection_target(NeatReflectionExample_Serialisation_ReflectionData NeatReflectionExample_Serialisation)

add_executable(NeatReflectionExample_SerialisationRunner "serialisation_example_runner.cpp")
target_compile_features(NeatReflectionExample_SerialisationRunner PUBLIC cxx_std_20)
target_link_libraries(NeatReflectionExample_SerialisationRunner PUBLIC NeatReflectionExample_Serialisation NeatReflectionExample_Serialisation_ReflectionData)
set_target_properties(NeatReflectionExample_SerialisationRunner PROPERTIES FOLDER "Neat/Examples")
